<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:onClick="displayMessage">

    <!-- TODO

    - Align buttons differently/use a different button style (grid/cards?)
    - Or use a slide-in menu
    - Once I learn how to do those things
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/appHeading"
        android:id="@+id/tbTitle"
        android:layout_marginTop="25dp"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_spotify"
        android:id="@+id/btnSpotify"
        android:layout_below="@+id/tbTitle"
        android:layout_centerHorizontal="true"
        android:height="@dimen/btn_height"
        android:width="@dimen/btn_width"
        android:onClick="btnSpotifyClick"
        android:background="#607D8B"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_scores"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnSpotify"
        android:layout_centerHorizontal="true"
        android:height="@dimen/btn_height"
        android:width="@dimen/btn_width"
        android:onClick="btnScoresClick"
        android:background="#607D8B"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_library"
        android:id="@+id/btnLibrary"
        android:layout_below="@+id/btnScores"
        android:layout_centerHorizontal="true"
        android:height="@dimen/btn_height"
        android:width="@dimen/btn_width"
        android:onClick="btnLibraryClick"
        android:background="#607D8B"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bigger"
        android:id="@+id/btnBigger"
        android:layout_below="@+id/btnLibrary"
        android:layout_centerHorizontal="true"
        android:height="@dimen/btn_height"
        android:width="@dimen/btn_width"
        android:onClick="btnBiggerClick"
        android:background="#607D8B"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_xyz"
        android:id="@+id/btnXyz"
        android:layout_below="@+id/btnBigger"
        android:layout_centerHorizontal="true"
        android:height="@dimen/btn_height"
        android:width="@dimen/btn_width"
        android:onClick="btnXyzClick"
        android:background="#607D8B"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXyz"
        android:layout_centerHorizontal="true"
        android:height="@dimen/btn_height"
        android:width="@dimen/btn_width"
        android:onClick="btnCapstoneClick"
        android:background="#607D8B"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF" />

</RelativeLayout>
